--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,14 +1,25 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+:root {
+  --primary-color: #ff5b2e;
 }
 
 html {
-    font-size: 62.5%;
+  font-size: 62.5%;
 }
 
 body {
-    font-size: 1.6rem;
-    font-family: "Poppins", sans-serif;
+  height: 10000px;
+  font-size: 1.6rem;
+  font-family: "Poppins", sans-serif;
+  background: #fffaf5;
+}
+
+/* Common */
+a {
+  text-decoration: none;
 }
 
 h1,
@@ -17,13 +28,257 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: "Sora", sans-serif;
+  font-family: "Sora", sans-serif;
 }
 
 input,
 textarea,
 select,
 button {
-    font-size: inherit;
-    font-family: inherit;
+  font-size: inherit;
+  font-family: inherit;
+}
+
+.container {
+  width: 1170px;
+  max-width: calc(100% - 48px);
+  margin: 0 auto;
+}
+
+.btn {
+  --height: 56px;
+
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 130px;
+  height: var(--height);
+  line-height: var(--height);
+  border: 1px solid rgb(0, 9, 88, 0.7);
+  border-radius: 99px;
+
+  /* text */
+  font-weight: 600;
+  text-align: center;
+  font-size: 14px;
+  color: #000958;
+}
+
+.btn:hover {
+  opacity: 0.9;
+}
+
+.btn--primary {
+  color: #fff;
+  background-color: var(--primary-color);
+  border-color: var(--primary-color);
+}
+
+.btn__icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 10px;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: #fff;
+}
+
+/* Header */
+.header {
+  padding: 26px 0;
+}
+
+.header__inner {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.navbar__list {
+  display: flex;
+}
+
+.navbar__link,
+.header-action__link {
+  padding: 8px 18px;
+  font-weight: 500;
+  font-size: 1.4rem;
+  line-height: 1;
+  color: #5e6085;
+}
+
+.navbar__link:hover,
+.navbar__link--active,
+.header-action__link:hover {
+  color: #000958;
+  text-shadow: 1px 0 0 currentColor;
+}
+
+.header-action__btn {
+  --height: 50px;
+
+  min-width: 118px;
+  height: var(--height);
+}
+
+/* Hero */
+.hero {
+  margin-top: 74px;
+}
+
+.hero__inner {
+  display: flex;
+  align-items: end;
+  justify-content: space-between;
+  column-gap: 120px;
+}
+
+.hero__media {
+  position: relative;
+  display: flex;
+  padding-bottom: 94px;
+}
+
+.hero__img-wrap {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  width: 388px;
+  height: 488px;
+  border-radius: 16px;
+  background: #fe997b;
+  border: 3px solid #fff;
+}
+
+.hero__img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+  border-radius: inherit;
+}
+
+.hero__decor {
+  position: absolute;
+  z-index: -1;
+}
+
+.hero__decor-left {
+  left: -58px;
+  bottom: 10px;
+}
+
+.hero__decor-right {
+  top: 16px;
+  right: -43px;
+}
+
+.hero__img-wrap-small {
+  align-self: flex-end;
+  width: 186px;
+  height: 244px;
+  border: 2px solid #fddfe1;
+  border-radius: 16px;
+  margin: 0 0 -58px -24px;
+  background: #faa7ad;
+}
+
+.hero__list {
+  position: absolute;
+  left: 129px;
+  bottom: 0;
+  width: 250px;
+  height: 156px;
+  padding: 18px 14px;
+  border-radius: 10px;
+  background: #fff;
+  box-shadow: -17px 14px 68px -4px rgba(207, 174, 132, 0.25);
+}
+
+.hero-list-item {
+  display: flex;
+}
+
+.hero-list-item__thumb {
+  width: 40px;
+  height: 40px;
+  object-fit: cover;
+  border-radius: 10px;
+  background: #fec23f;
+}
+
+.hero-list-item__info {
+  margin-left: 10px;
+}
+
+.hero-list-item__title {
+  font-family: Sora, sans-serif;
+  font-weight: 600;
+  font-size: 1.4rem;
+  line-height: 1;
+  color: #181e52;
+}
+
+.hero-list-item__separate {
+  width: 222px;
+  height: 2px;
+  margin: 20px 0;
+  border-radius: 99px;
+  background: #f2f2f2;
+}
+
+.hero-list-item__skeleton {
+  margin-top: 6px;
+  width: var(--width, 118px);
+  height: 4px;
+  border-radius: 10px;
+  opacity: 0.08;
+  background: #000958;
+}
+
+.hero-list-item:nth-of-type(2) .hero-list-item__thumb {
+  background: #c6e2fa;
+}
+
+.hero__heading {
+  font-size: 6.6rem;
+  font-weight: 800;
+  line-height: 1.15;
+  color: #000958;
+}
+
+.hero__desc {
+  width: 391px;
+  margin-top: 24px;
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 1.87;
+  color: #656689;
+}
+
+.hero__row {
+  display: flex;
+  align-items: center;
+  margin-top: 38px;
+  display: flex;
+}
+
+.hero__cta-btn {
+  --height: 60px;
+
+  min-width: 190px;
+  height: var(--height);
+  font-size: 1.6rem;
+  box-shadow: 0px 13px 26px -8px rgba(255, 91, 46, 0.42);
+}
+
+.hero__cta-link {
+  margin-left: 24px;
+  font-size: 1.6rem;
+  font-weight: 500;
+  line-height: 1;
+  text-decoration: underline;
+  color: #000958;
 }
